--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "fjb",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "mysql": "^2.15.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
