--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "mysql": "^2.15.0"
   },
   "devDependencies": {
